--- a/mcp-tool-picker/index.html
+++ b/mcp-tool-picker/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/demos/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/demos/mcp-tool-picker/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VS Code Prototypes</title>
-    <script type="module" crossorigin src="/demos/assets/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/demos/assets/index.css">
+    <script type="module" crossorigin src="/demos/mcp-tool-picker/assets/index.js"></script>
+    <link rel="stylesheet" crossorigin href="/demos/mcp-tool-picker/assets/index.css">
   </head>
   <body>
     <div id="app"></div>
