--- a/mcp-tool-confirmation/index.html
+++ b/mcp-tool-confirmation/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/theme.css">
-    <link rel="stylesheet" href="/public/codicon.css" id="vscode-codicon-stylesheet">
+    <link rel="stylesheet" href="/theme.css">
+    <link rel="stylesheet" href="/codicon.css" id="vscode-codicon-stylesheet">
     <title>VS Code – MCP Tool Confirmation</title>
   </head>
   <body>
